--- a/Homework3/xyuzhong/Vue-Template/package.json
+++ b/Homework3/xyuzhong/Vue-Template/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/d3-sankey": "^0.12.5",
     "@vueuse/core": "^14.1.0",
     "axios": "^1.13.2",
     "d3": "^7.9.0",
+    "d3-sankey": "^0.12.3",
     "lodash": "^4.17.21",
     "pinia": "^3.0.4",
     "vite-plugin-vuetify": "^2.1.2",
